refactor: cache maven dependencies